--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,13 +1,14 @@
 html {
   font-size: 10px;
-  background: url('./background.jpg') bottom center;
+  background: url('./backgroundimage.jpg') bottom center;
   background-size: cover;
 }
 
 body,html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .keys {
@@ -19,7 +20,7 @@ body,html {
 }
 
 .key {
-  border: .4rem solid black;
+  border: .4rem solid #251e18;
   border-radius: .5rem;
   margin: 1rem;
   font-size: 1.5rem;
@@ -28,14 +29,14 @@ body,html {
   width: 10rem;
   text-align: center;
   color: white;
-  background: rgba(0,0,0,0.4);
-  text-shadow: 0 0 .5rem black;
+  background: rgba(182, 145, 121, 0.4);
+  text-shadow: 0 0 .5rem #251e18;
 }
 
 .playing {
   transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+  border-color: #917b63;
+  box-shadow: 0 0 1rem #917b63;
 }
 
 kbd {
@@ -47,5 +48,59 @@ kbd {
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: .1rem;
-  color: #ffc600;
+  color: #2c1f10;
+}
+
+#hihat {
+  grid-area: hihat;
+}
+
+#snare {
+  grid-area: snare;
+}
+#cymbol1 {
+  grid-area: cymbol1;
+  align-self: flex-end;
+}
+#tom1 {
+  grid-area: tom1;
+  align-self: flex-end;
+
+}
+#kick {
+  grid-area: kick;
+  width: 13rem;
+  align-self: flex-start;
+}
+#cymbol2 {
+  grid-area: cymbol2;
+  align-self: flex-end;
+}
+#tom2 {
+  grid-area: tom2;
+}
+#tom {
+  grid-area: tom;
+}
+#cymbol4 {
+  grid-area: cymbol4;
+  width: 13rem;
+}
+#header{
+  grid-area: header;
+  color: white;
+  text-shadow: 0 0 .5rem #251e18;
+  font-size: 7rem;
+  padding: 20px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    "header header cymbol1 tom1 cymbol2"
+    ". cymbol4 hihat snare tom"
+    ". . . kick .";
 }
